@@ -770,6 +770,9 @@ To translate:
   'Start Bricolage' => 'Start Bricolage',
   'and Revert' => 'and Revert',
   'and Delete' => 'and Delete',
+  'Media "[_1]" checked in and reverted.' => 'Media "[_1]" checked in and reverted.',
+  'Story "[_1]" checked in and reverted.' => 'Story "[_1]" checked in and reverted.',
+  'Template "[_1]" checked in and reverted.' => 'Template "[_1]" checked in and reverted.',
 
 Notice:
 
